backend almost done

--- a/.env
+++ b/.env
@@ -19,9 +19,9 @@ VITE_API_URL=http://localhost:8000
 
 # Backend
 BACKEND_CORS_ORIGINS="http://localhost,http://localhost:5173,https://localhost,https://localhost:5173,http://localhost.tiangolo.com"
-SECRET_KEY=changethis
+SECRET_KEY=RCkqgyjIYek2aBDG1ZjgYeJJoM7YgU0qL6f-g_bPeao
 FIRST_SUPERUSER=admin@example.com
-FIRST_SUPERUSER_PASSWORD=changethis
+FIRST_SUPERUSER_PASSWORD=test-saif
 
 # Emails
 SMTP_HOST=
@@ -37,7 +37,7 @@ POSTGRES_SERVER=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=app
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=changethis
+POSTGRES_PASSWORD=wS4:2!=j:`f6
 
 SENTRY_DSN=
 
