--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,8 @@
     "react-error-boundary": "^4.0.13",
     "react-hook-form": "7.49.3",
     "react-icons": "5.0.1",
-    "react-slick": "^0.30.2"
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@biomejs/biome": "1.6.1",
