--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "dotenv": "^16.4.5",
