--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ DOMAIN=localhost
 # DOMAIN=localhost.tiangolo.com
 
 # Used by the backend to generate links in emails to the frontend
-FRONTEND_HOST=http://localhost:5173
+FRONTEND_HOST=http://bookmyshow.ansarisaif.com:5173
 # In staging and production, set this env var to the frontend host, e.g.
 # FRONTEND_HOST=https://dashboard.example.com
 
@@ -15,10 +15,10 @@ ENVIRONMENT=local
 
 PROJECT_NAME="Full Stack FastAPI Project"
 STACK_NAME=full-stack-fastapi-project
-VITE_API_URL=http://localhost:8000
+VITE_API_URL=http://bookmyshow.ansarisaif.com:8000
 
 # Backend
-BACKEND_CORS_ORIGINS="http://localhost,http://localhost:5173,https://localhost,https://localhost:5173,http://localhost.tiangolo.com"
+BACKEND_CORS_ORIGINS="http://bookmyshow.ansarisaif.com,http://bookmyshow.ansarisaif.com:5173,https://bookmyshow.ansarisaif.com,https://bookmyshow.ansarisaif.com:5173,http://bookmyshow.ansarisaif.com.tiangolo.com"
 SECRET_KEY=RCkqgyjIYek2aBDG1ZjgYeJJoM7YgU0qL6f-g_bPeao
 FIRST_SUPERUSER=admin@example.com
 FIRST_SUPERUSER_PASSWORD=test-saif
