--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=http://localhost:8000
+VITE_API_URL=http://bookmyshow.ansarisaif.com:8000
 VITE_API_KEY=2be5ab439dc393ba1ff75995066bc1b0
